+ doc + crud via http
